--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -31,9 +31,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1564
+          "height": 2683
         },
-        "outputId": "1256cc94-6ccf-4704-f29b-9f86e454eed0"
+        "outputId": "05404cb1-c9e7-45ab-eead-a6fc48088896"
       },
       "cell_type": "code",
       "source": [
@@ -80,32 +80,32 @@
         "  output_target[\"median_house_value\"] = (housing_dataframe[\"median_house_value\"]/1000.0)\n",
         "  return output_target\n",
         "\n",
-        "train_example = preprosses_feature(housing_dataframe.head(12000))\n",
-        "train_target = preprosses_target(housing_dataframe.head(12000))\n",
+        "training_examples = preprosses_feature(housing_dataframe.head(12000))\n",
+        "training_targets = preprosses_target(housing_dataframe.head(12000))\n",
         "\n",
-        "validation_example = preprosses_feature(housing_dataframe.tail(5000))\n",
-        "validation_target = preprosses_target(housing_dataframe.tail(5000))  \n",
+        "validation_examples = preprosses_feature(housing_dataframe.tail(5000))\n",
+        "validation_targets = preprosses_target(housing_dataframe.tail(5000))  \n",
         "\n",
         "print(\"training machine\")\n",
-        "display.display(train_example.describe())\n",
+        "display.display(training_examples.describe())\n",
         "\n",
         "print(\"target of machine\")\n",
-        "display.display(train_target.describe())\n",
+        "display.display(training_targets.describe())\n",
         "\n",
         "print(\"validation of housing value example\")\n",
-        "display.display(validation_example.describe())\n",
+        "display.display(validation_examples.describe())\n",
         "\n",
         "print(\"validation of target\")\n",
-        "display.display(validation_target.describe())\n",
+        "display.display(validation_targets.describe())\n",
         "\n",
         "correlation_dataframe = housing_dataframe.copy()\n",
-        "correlation_dataframe[\"target\"] = train_target[\"median_house_value\"]\n",
+        "correlation_dataframe[\"target\"] = training_targets[\"median_house_value\"]\n",
         "display.display(correlation_dataframe.corr())\n",
         "\n",
-        "def construt_feature_column(input_features):\n",
+        "def construct_feature_columns(input_features):\n",
         "\n",
-        "  return set([tf.feature_column.numric.column(my_feature)\n",
-        "             for my_feature in inpu_features])\n",
+        "  return set([tf.feature_column.numeric_column(my_feature)\n",
+        "             for my_feature in input_features])\n",
         "def my_input_fn(features, target, batch_size=1, shuffle=True, num_epochs=None):\n",
         "  features = {key:np.array(value) for key,value in dict(features).iteams()}\n",
         "  ds = Dataset.from_tensorn_slices((features,target))\n",
@@ -123,9 +123,99 @@
         "    training_targets,\n",
         "    validation_examples,\n",
         "    validation_targets):\n",
+        "    \n",
+        "  periods = 10\n",
+        "  steps_per_period = steps / periods\n",
+        "    \n",
+        "  my_optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
+        "  my_optimizer = tf.contrib.estimator.clip_gradients_by_norm(my_optimizer, 5.0)\n",
+        "  liner_regressor = tf.estimator.LinearRegressor(feature_columns=construct_feature_columns(training_examples),\n",
+        "                                                    optimizer = my_optimizer\n",
+        "                                                ) \n",
+        "      \n",
+        "    \n",
+        "  training_input_fn = lambda: my_input_fn(training_examples,\n",
+        "                                           training_tragets[\"median_house_value\"],\n",
+        "                                           batch_size = batch_size)\n",
+        "  predict_training_input_fn = lambda: my_input_fn(training_examples,\n",
+        "                                                   training_tragets[\"median_house_value\"],\n",
+        "                                                   num_epoch = 1,\n",
+        "                                                   shuffle =  True)\n",
+        "  predict_validation_input_fn = lambda: my_input_fn(validation_examples,\n",
+        "                                                   validation_tragets[\"median_house_value\"],\n",
+        "                                                   num_epoch = 1,\n",
+        "                                                   shuffle =  True)\n",
+        "    \n",
+        "  print(\"training on model.......\")\n",
+        "  print(\"RMES (on training data):\")\n",
+        "  training_rmse = []\n",
+        "  validation_rmse = []\n",
+        "  for period in range (0,periods):\n",
+        "      liner_regressor.train(\n",
+        "          input_fn=training_input_fn,\n",
+        "          steps=steps_per_period,\n",
+        "    )\n",
+        "      training_predictions = liner_regressor_predict(input_fn=predict_training_input_fn)\n",
+        "      training_predictions = np.array([item['prediction'][0] for item in training_prediction])\n",
+        "        \n",
+        "      validation_predictions = liner_regressor_predict(input_fn=predict_training_input_fn)\n",
+        "      validation_predictions = np.array([item['prediction'][0] for item in validation_prediction])\n",
+        "        \n",
+        "        \n",
+        "      training_root_mean_squred_error = math.sqrt(\n",
+        "          matrics.mean_squred_error(training_predictions, training_targets))\n",
+        "      validation_root_mean_squred_error = math.sqrt(\n",
+        "          matrics.mean_squred_error(validation_predictions, validation_targets))\n",
+        "        \n",
+        "      print(\"  period%02d : %0.2f\" % (period, training_root_mean_squred_error))\n",
+        "      training_rmse.append(training_root_mean_squred_error)\n",
+        "      validation_rmse.append(validation_root_mean_squred_error)\n",
+        "  print(\"model training fineshed\")\n",
+        "      \n",
+        "      \n",
+        "  plt.ylabel(\"RMSE\")\n",
+        "  plt.xlabel(\"Periods\")\n",
+        "  plt.title(\"Root Mean Squared Error vs. Periods\")\n",
+        "  plt.tight_layout()\n",
+        "  plt.plot(training_rmse, label=\"training\")\n",
+        "  plt.plot(validation_rmse, label=\"validation\")\n",
+        "  plt.legend()\n",
+        "\n",
+        "  return linear_regressor\n",
+        "\n",
+        "minimal_features = [\n",
+        "  \"median_income\",\n",
+        "  \"latitude\",\n",
+        "]\n",
+        "\n",
+        "minimal_training_examples = training_examples[minimal_features]\n",
+        "minimal_validation_examples = validation_examples[minimal_features]\n",
+        "\n",
+        "_ = train_model(\n",
+        "    learning_rate=0.01,\n",
+        "    steps=500,\n",
+        "    batch_size=5,\n",
+        "    training_examples=minimal_training_examples,\n",
+        "    training_targets=training_targets,\n",
+        "    validation_examples=minimal_validation_examples,\n",
+        "    validation_targets=validation_targets)\n",
+        "        \n",
+        "        \n",
+        "        \n",
+        "        \n",
+        "        \n",
+        "        \n",
+        "        \n",
+        "        \n",
+        "          \n",
+        "        \n",
+        "      \n",
+        "    \n",
+        "  \n",
+        "  \n",
         "  \n"
       ],
-      "execution_count": 40,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,6 +931,32 @@
           "metadata": {
             "tags": []
           }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "training on model.......\n",
+            "RMES (on training data):\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-fa8e366678ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    160\u001b[0m     \u001b[0mtraining_targets\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtraining_targets\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m     \u001b[0mvalidation_examples\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mminimal_validation_examples\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m     validation_targets=validation_targets)\n\u001b[0m\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-17-fa8e366678ea>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(learning_rate, steps, batch_size, training_examples, training_targets, validation_examples, validation_targets)\u001b[0m\n\u001b[1;32m    115\u001b[0m       liner_regressor.train(\n\u001b[1;32m    116\u001b[0m           \u001b[0minput_fn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtraining_input_fn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m           \u001b[0msteps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msteps_per_period\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m     )\n\u001b[1;32m    119\u001b[0m       \u001b[0mtraining_predictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mliner_regressor_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_fn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpredict_training_input_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/estimator/estimator.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, input_fn, hooks, steps, max_steps, saving_listeners)\u001b[0m\n\u001b[1;32m    354\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    355\u001b[0m       \u001b[0msaving_listeners\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_listeners_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msaving_listeners\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 356\u001b[0;31m       \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_train_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msaving_listeners\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    357\u001b[0m       \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Loss for final step: %s.'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    358\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/estimator/estimator.py\u001b[0m in \u001b[0;36m_train_model\u001b[0;34m(self, input_fn, hooks, saving_listeners)\u001b[0m\n\u001b[1;32m   1179\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_train_model_distributed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msaving_listeners\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1180\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1181\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_train_model_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msaving_listeners\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1183\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_train_model_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msaving_listeners\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/estimator/estimator.py\u001b[0m in \u001b[0;36m_train_model_default\u001b[0;34m(self, input_fn, hooks, saving_listeners)\u001b[0m\n\u001b[1;32m   1206\u001b[0m       features, labels, input_hooks = (\n\u001b[1;32m   1207\u001b[0m           self._get_features_and_labels_from_input_fn(\n\u001b[0;32m-> 1208\u001b[0;31m               input_fn, model_fn_lib.ModeKeys.TRAIN))\n\u001b[0m\u001b[1;32m   1209\u001b[0m       \u001b[0mworker_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_hooks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1210\u001b[0m       estimator_spec = self._call_model_fn(\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/estimator/estimator.py\u001b[0m in \u001b[0;36m_get_features_and_labels_from_input_fn\u001b[0;34m(self, input_fn, mode)\u001b[0m\n\u001b[1;32m   1047\u001b[0m     \u001b[0;34m\"\"\"Extracts the `features` and labels from return values of `input_fn`.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1048\u001b[0m     return estimator_util.parse_input_fn_result(\n\u001b[0;32m-> 1049\u001b[0;31m         self._call_input_fn(input_fn, mode))\n\u001b[0m\u001b[1;32m   1050\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1051\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_extract_batch_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpreds_evaluated\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/estimator/estimator.py\u001b[0m in \u001b[0;36m_call_input_fn\u001b[0;34m(self, input_fn, mode)\u001b[0m\n\u001b[1;32m   1134\u001b[0m       \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'config'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1135\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/cpu:0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1136\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0minput_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1137\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1138\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_call_model_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-17-fa8e366678ea>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m   training_input_fn = lambda: my_input_fn(training_examples,\n\u001b[0;32m---> 99\u001b[0;31m                                            \u001b[0mtraining_tragets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"median_house_value\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    100\u001b[0m                                            batch_size = batch_size)\n\u001b[1;32m    101\u001b[0m   predict_training_input_fn = lambda: my_input_fn(training_examples,\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'training_tragets' is not defined"
+          ]
         }
       ]
     },
